# inkless-db

./: .eslintrc  .prettierignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src-tauri/src/db/: builder.rs  mod.rs  pool.rs  schema.rs
src/components/: Dropzone.tsx  GraphCanvas.tsx  ListPanel.tsx  SchemaBrowser.tsx  StatsSidebar.tsx  TableCreateDialog.tsx  TableNode.tsx
src/components/ui/: button.tsx
src/hooks/: useDragState.ts  useNativeFileDrop.ts
src/hooks/__tests__/: useDragState.test.tsx  useNativeFileDrop.test.tsx
src/lib/: file-utils.ts  format.ts  tauri.ts
src/lib/__tests__/: client.test.ts  file-utils.test.ts  format.test.ts  sqlite-client.test.ts  tauri.test.ts
src/lib/db/: client.ts  context.tsx  sqlite-client.ts  tauri.ts
src/pages/: GraphPage.tsx  WelcomePage.tsx
src/store/: connection.tsx
