[package]
name = "inkless-db"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# --- Async runtime & utils ---
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1"

# --- Serde ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- DB stack ---
# Remove rusqlite; we now use sqlx for SQLite/Postgres/MySQL
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "postgres",
  "mysql"
] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql"
] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
